--- a/src/content/post/oss/rust/learnings-from-contributing-to-the-rust-project.mdx
+++ b/src/content/post/oss/rust/learnings-from-contributing-to-the-rust-project.mdx
@@ -1,26 +1,26 @@
 ---
 title: Learnings from Contributing to the Rust Project
 description: As I started reading a lot more about Rust compilation, I realized that I needed to find a way to contribute to the rust project and eventually , and validate my assumptions / understanding of the compiler.
-publishDate: Oct 24, 2024
+publishDate: Oct 28, 2024
 tags: ["rust", "oss", "compiler"]
 coverImage:
   src: "./cover.png"
   alt: "Learnings from Contributing to the Rust Project"
   border: true
-draft: true
 ---
 
 import { Image } from "astro:assets";
 import Tweet from "astro-tweet";
-import rustContributorsScreenshot from "../../attachments/rust-contributors.png";
+import rustContributorsScreenshot from "../../attachments/rust-contributors-purple.png";
+import ThemedImage from "@/components/ThemedImage";
 
-I've been reading about Rust compilation stages, and wrote about some of my learnings in a [previous post](https://blog.shrirambalaji.com/posts/resolving-rust-symbols/). As I started reading more, I realized that it might be helpful to find a way to contribute to the project, learn more about the compiler and validate my assumptions / understanding of the compiler.
+I've been reading about stages of Rust compilation, and wrote about some of my learnings in a [previous post](https://blog.shrirambalaji.com/posts/resolving-rust-symbols/). As I started reading more, I realized that it might be helpful to find a way to contribute to the project, learn more about the compiler and validate my assumptions / understanding of the compiler.
 
 ## Finding an issue to work on
 
-The `rustc` compiler is a large codebase, and I was a bit intimidated by the size of the codebase. I started looking at the issues that were tagged as `E-mentor` and found an issue that was tagged as `E-mentor` and `E-easy` and landed on [#129599](https://github.com/rust-lang/rust/issues/129599).
+The `rustc` compiler is a large codebase, and definitely intimidating at first glance. As with contributing to any new OSS project, I started by looking at the issues that were tagged as beginner friendly and found an issue that was tagged as `E-mentor` and `E-easy`: [#129599](https://github.com/rust-lang/rust/issues/129599).
 
-It involved adding a new `std_features` flag to the bootstrap phase of the compiler, that helps in enabling `std` features for compiler development. This could be features like enabling `panic-unwind` or `backtrace` features when building the compiler.
+It involved adding a new `std_features` flag to the bootstrap phase of the compiler, that helps in enabling `std` features for compiler development. This could be features like enabling `panic-unwind` or `backtrace` features when building the compiler. When you e
 
 This felt like a good issue to start with, and it was relatively straightforward to understand the issue, but I had to understand how the compiler was bootstrapped and how the `std_features` flag was passed to the compiler.
 
@@ -29,6 +29,12 @@ I also connected with [`Onur Ozkan`](https://onurozkan.dev) who was the mentor f
 ## What's bootstrapping?
 
 Bootstrapping is how the compiler compiles itself, typically by using an older version to build a newer version. For rust to bootstrap, it has 4 stages:
+
+<ThemedImage
+	alt="Rust Bootstrap Stages"
+	src={"/attachments/rust-bootstrap-stages.svg"}
+	darkSrc={"/attachments/rust-bootstrap-stages-dark.svg"}
+></ThemedImage>
 
 - Stage 0: Pre-compiled Compiler - the current beta `rustc` and is downloaded from the internet.
 - Stage 1: Compiler built with the pre-compiled compiler from Stage 0
@@ -39,9 +45,7 @@ The [Rustc Dev Guide on Bootstrapping](https://rustc-dev-guide.rust-lang.org/bui
 
 ## Getting started
 
-I followed the steps in the [Quick Start](https://rustc-dev-guide.rust-lang.org/building/how-to-build-and-run.html#quick-start) guide on my macOs machine, and I ran into my first issue.
-
-### Lesson: Don't install `binutils` via `brew`
+I followed the steps in the [Quick Start](https://rustc-dev-guide.rust-lang.org/building/how-to-build-and-run.html#quick-start) guide on my macOS machine, and I ran into my first issue:
 
 The `./x.py setup` command failed with the following error:
 
@@ -81,7 +85,7 @@ failed to run: /Users/shrirambalaji/Repositories/rust/build/aarch64-apple-darwin
 Build completed unsuccessfully in 0:00:13
 ```
 
-It looked like the build failed because the dependencies couldn't be compiled. Initially I thought that I had some system dependencies missing, but later found out that it was because of conflicting system dependencies. Specifically, I had `binutils` installed via `brew` and I had `strip` in my path, which was conflicting with the `strip` that was being used by the compiler.
+It looked like the build failed because the dependencies couldn't be compiled. Initially, I thought that I had some system dependencies missing, but later found out that it was because of conflicting system dependencies. I had `binutils` installed via `brew` and I had `strip` in my path, which was conflicting with the `strip` that was being used by the compiler.
 
 So I had to remove `binutils` from my path, and then the build was successful:
 
@@ -93,7 +97,7 @@ brew uninstall binutils
 
 Wait a minute - why's there a python script to build the compiler? 🤔
 
-`x.py` a wrapper that calls into `bootstrap` which is a cross-platform build tool backed by `cargo` specifically for the rust project. `x.py` by itself doesn't do a lot more, other than checking for the python version and subsequently invoking the `bootstrap.py` script, which does the following:
+`x.py` is a wrapper script that calls into the `bootstrap` tool - a cross-platform build tool backed by `cargo`, used specifically for the rust project. `x.py` by itself doesn't do a lot more, other than checking for the python version and subsequently invoking the `bootstrap.py` script, which does the following:
 
 - Parses the CLI arguments and passes it on the `bootstrap` tool
 - Downloads the rust toolchain, and makes sure that the necessary build tools `rustc`, `cargo` etc., are available.
@@ -103,18 +107,18 @@ Wait a minute - why's there a python script to build the compiler? 🤔
 So when we call `./x <subcommand>`, it's actually invoking the `bootstrap` CLI with the subcommand.
 
 :::note
-I understand the convenience of having a python script to wrap the build process, but it was a bit surprising to look at first. Also it does seem like Python is preferred for build scripts that run in CI, and it's not overused. There's a discussion to purge python, and over time it seems like a lot of the python scripts have been replaced. https://github.com/rust-lang/rust/issues/110479
+I understand the convenience of having a python script to wrap the build process, but it was a bit surprising at first. Also it does seem like Python is preferred for build scripts that run in CI, and it's not overused. There's a discussion to purge python, and over time it seems like a lot of the python scripts have been replaced. https://github.com/rust-lang/rust/issues/110479
 :::
 
 ## Setting up Zed for Compiler Development
 
-I've started using Zed for all of my personal work, and it's been fantastic.
+I've started using Zed for all of my personal work and I've been liking it a lot.
 
 <div class="tweet-embed">
 	<Tweet id="1847665535502213165" />
 </div>
 
-`./x setup` has an option to add settings for VSCode, but none for Zed. Specifically, this is important for `rust_analyzer` to work correctly during rust compiler dev. The configuration for `rust_analyzer` is not very different from VSCode, but needs to be added in a `.zed/settings.json` in the root of the repo:
+`./x setup` has an option to add settings to configure VSCode, but not for Zed. This is important for `rust_analyzer` to work correctly during compiler development. The configuration for `rust_analyzer` is not very different from VSCode, but needs to be added in a `.zed/settings.json` in the root of the repo:
 
 ```json title=".zed/settings.json"
 {
@@ -159,7 +163,9 @@ I've started using Zed for all of my personal work, and it's been fantastic.
 }
 ```
 
+:::note
 There's an open issue to add a step for setting Zed for compiler dev, and I just assigned it to myself to get it fixed: https://github.com/rust-lang/rust/issues/126931
+:::
 
 ## Making the change
 
@@ -175,15 +181,57 @@ The change involved a couple of steps:
 std-features = ["panic_unwind"]
 ```
 
-### The internal toml parser
+### How does bootstrap read the `config.toml` file?
 
-The internal `toml` parser, parses the `config.toml` and all its sections and fields in predefined [`structs`](https://github.com/shrirambalaji/rust/blob/8b968764f15ea84b389b2af98297b9d30fb9952e/src/bootstrap/src/core/config/config.rs#L1101) from the config file, so I just had to add a field in the `Rust` struct, mapping it to the field name [here](https://github.com/shrirambalaji/rust/blob/8b968764f15ea84b389b2af98297b9d30fb9952e/src/bootstrap/src/core/config/config.rs#L1156).
+Bootstrap uses [toml-rs](https://crates.io/crates/toml) to parse the `config.toml`. Also since configuration can be overridden from both the `toml` file and from command line arguments, the `TomlConfig` struct implements a `Merge` trait:
 
-For deduplicating, I originally used a `HashSet` on the list of values, but was recommended a `BTreeSet` to get deterministic ordering - which made sense, and should've been my first choice.
+```rust
 
-### Error Handling
+/// Denotes how the config needs to be merged, specifically when handling duplicates.
+enum ReplaceOpt {
+    /// Silently ignore a duplicated value
+    IgnoreDuplicate,
+    /// Override the current value, even if it's `Some`
+    Override,
+    /// Exit with an error on duplicate values
+    ErrorOnDuplicate,
+}
 
-The `toml` parser handles parsing errors by default, so I didn't have to do anything there. Since the `std_features` option can fundamentally change the output of the compiler, we should throw an error if this configuration is passed in CI builds. I really liked the `err` macro that they had setup for making this easy.
+impl Merge for TomlConfig {
+    fn merge(
+        &mut self,
+		// other options from `TomlConfig` are also required here
+        TomlConfig { rust }: Self,
+        replace: ReplaceOpt,
+    ) {
+        fn do_merge<T: Merge>(x: &mut Option<T>, y: Option<T>, replace: ReplaceOpt) {
+            if let Some(new) = y {
+                if let Some(original) = x {
+                    original.merge(new, replace);
+                } else {
+                    *x = Some(new);
+                }
+            }
+        }
+        do_merge(&mut self.rust, rust, replace);
+		// merge other fields in `TomlConfig` . . .
+    }
+}
+```
+
+The config fields are not directly decoded, but decoded into separate sections represented by their own [`struct`](https://github.com/shrirambalaji/rust/blob/8b968764f15ea84b389b2af98297b9d30fb9952e/src/bootstrap/src/core/config/config.rs#L1101). In my case, I only needed to add a field in the `Rust` struct, corresponding to the `[rust]` section in the `config.toml` [here](https://github.com/shrirambalaji/rust/blob/8b968764f15ea84b389b2af98297b9d30fb9952e/src/bootstrap/src/core/config/config.rs#L1156).
+
+### Deduplicating `std_features`
+
+Although the previous step handled merging, since we are dealing with a list of values there needed to be some way to deduplicate it, because the internal `features` representation needs to be based on that.
+
+I reached for the handy [`HashSet`](https://doc.rust-lang.org/std/collections/struct.HashSet.html) collection, but from the review I understood that the order of `std_features` could be important, and the current implementation works with this assumption. `HashSet` does not have deterministic ordering and so I cannot use it, this is because it's backed by a hashtable and needs to be compute the hashcode for every element and then puts it in a "bucket". The bucket has no connection to the insertion order, so there's no way to keep track of the insertion order.
+
+So I implemented it with a [`BTreeSet`](https://doc.rust-lang.org/std/collections/struct.BTreeSet.html) instead as suggested in the initial review.
+
+### Error Handling in CI Builds
+
+The `toml` parser handles parsing errors by default, so I didn't have to do anything there. Since the `std_features` option can fundamentally change the output of the compiler, we need to throw an error if this config gets passed in CI builds. I really liked the `err` macro that they had setup for making this easy.
 
 ```rust
 macro_rules! err {
@@ -204,24 +252,39 @@ macro_rules! err {
 }
 ```
 
-I usually stay away from macros (skill issue tbh), I liked this one. However, this could have very well been a function too if you ask me.
+I usually stay away from macros (skill issue tbh), but I liked this one. I'm still contemplating if this could have been a function, but I digress.
 
 ### Merging the change - Squashing commits
 
-I addressed all the feedback comments, and the PR was ready for merge. But `rustc` compiler development follows rebase + squash for contributors. I generally have my own reservations about rebase:
+I addressed all the feedback comments, and the PR was ready for merge. The rust project follows a rebase + squash workflow for contributors. I have had my own reservations about rebase in the past:
 
 <div class="tweet-embed">
 	<Tweet id="1769207470814269687" />
 </div>
 
-I learnt that most of my pain with rebase was mostly due to my ignorance of [`rerere`](https://git-scm.com/book/en/v2/Git-Tools-Rerere) which solves a lot of issues dealing with rebase merge conflicts in the past.
+I learnt that most of my pain with rebase was probably due to not knowing about [`rerere`](https://git-scm.com/book/en/v2/Git-Tools-Rerere) which solved a lot of issues dealing with rebase merge conflicts.
 
-Rebasing by itself wasn't tricky, but I'm not generally used to squashing, so this was new. The first time around I botched the squash and messed up the branch. Since it was also a rebase and I pushed upstream, there was no way to undo it (maybe there's one, but I gave up pretty quickly).
+However, squashing was new to me and the first time around I botched the squash and messed up the branch. Since it was also a rebase and I pushed upstream, there was no way to undo it (maybe there's a way, but I gave up pretty quickly).
 
 So I made a new branch, rebased upstream onto it and cherry-picked my changes from the previous changes, and then squashed all of them into a single commit after following through this [article](https://www.git-tower.com/learn/git/faq/git-squash).
 
-Finally, after a couple of weeks of picking up my first issue, I got my first PR merged - https://github.com/rust-lang/rust/pull/131315. This might all sound trivial, but hey - I would not have imagined me being able to contribute something to the rust project a couple of years ago, it's good to count the small wins! https://thanks.rust-lang.org/rust/1.83.0/ now lists me as a contributor 😄
+Finally, after a couple of weeks of picking up my first issue, I got my first PR merged - https://github.com/rust-lang/rust/pull/131315. This might all sound trivial, but hey - I would not have imagined me being able to contribute to the rust project a couple of years ago, it's good to count the small wins! https://thanks.rust-lang.org/rust/1.83.0/ now lists me as a contributor 😄
 
-Looking forward to contributing and learning a lot more about `rustc`.
+<Image
+	src={rustContributorsScreenshot}
+	alt="Contributor's Screenshot"
+	width="800"
+	quality="max"
+	class="border border-indigo-300"
+></Image>
+
+Looking forward to contributing, learning and sharing a lot more about `rustc`.
 
 See you in the next one 👋
+
+### References
+
+- [Contributing to Rust: Video Series by Felix K](https://www.youtube.com/watch?v=9H9SO2u6Q20)
+- [Hacking rustc: Talk by Esteban Kuber](https://www.youtube.com/watch?v=9H9SO2u6Q20)
+- [Bootstrapping: Talk by Jynn Nelson](https://www.youtube.com/watch?v=9H9SO2u6Q20)
+- [Rustc Compiler Dev Guide](https://rustc-dev-guide.rust-lang.org)
