update og images

--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -14,6 +14,7 @@ coverImage:
   alt: "Resolving Rust Symbols"
   border: true
   shouldInvert: true
+ogImage: "/covers/resolving-rust-symbols.png"
 ---
 
 import { Picture, Image } from "astro:assets";
