--- a/src/content/post/oss/rust/learnings-from-contributing-to-the-rust-project.mdx
+++ b/src/content/post/oss/rust/learnings-from-contributing-to-the-rust-project.mdx
@@ -7,6 +7,7 @@ coverImage:
   src: "./cover.png"
   alt: "Learnings from Contributing to the Rust Project"
   border: true
+ogImage: "/covers/learnings-from-contributing-to-the-rust-project.png"
 ---
 
 import { Image } from "astro:assets";
