--- a/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
+++ b/src/content/post/linkerland/devlogs/001-writing-a-linker-map-parser.mdx
@@ -5,11 +5,12 @@ publishDate: "Sept 7 2024"
 tags:
   - rust
   - linkers
-  - linker map
+  - linker-map
   - parsers
   - linux
   - macos
-  - systems programming
+  - systems-programming
+  
 coverImage:
   src: "./covers/001-writing-a-linker-map-parser.png"
   alt: "Writing A Linker Map Parser - Linkerland Devlog 001"
