--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -8,7 +8,7 @@ tags:
   - linux
   - macos
   - elf
-  - systems programming
+  - systems-programming
 coverImage:
   src: "./cover.png"
   alt: "Resolving Rust Symbols"
